apps/technitium/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: technitium
  namespace: technitium
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - dns.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: technitium
          port: 80
